# project_risk

./: .pre-commit-config.yaml  Home.py  LICENSE  README.md  app.py  prek.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: test.yml
.streamlit/: config.toml
pages/: 1_Single_Project.py  2_Task_List.py  3_Task_DAG.py
src/: Home.py
src/pages/: 1_Single_Project.py  2_Task_List.py  3_Task_DAG.py  4_Task_Workflow.py
src/project_risk/: __init__.py  charts.py  dag.py  models.py  monte_carlo.py  pert.py  ui.py  workflow.py
tests/: charts_test.py  conftest.py  dag_test.py  models_test.py  pert_test.py  test_models.py  test_monte_carlo.py  workflow_test.py
