[project]
name = "project_risk"
version = "0.1.0"
description = ""
authors = [{ name = "Maurycy Blaszczak", email = "mgblaszczak@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.29.0",
    "numpy>=1.26.0",
    "networkx>=3.6.1",
]

[dependency-groups]
dev = [
    "ruff>=0.4.10",
    "ty>=0.0.1a0",
    "prek>=0.0.1a0",
    "pytest>=8.2.2",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88
lint.select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
lint.ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    # Ignore checks for possible passwords
    "S105",
    "S106",
    "S107",
    # Ignore complexity
    "C901",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "D211",    # no-blank-line-before-class
    "D213",    # multi-line-summary-second-line`
    "ISC001",  # single-line-implicit-string-concatenation solved by formatter
    "N999",    # streamlit page titles
    "UP007",   # issues with streamlit
    "TID252",  # allow relative import for streamlit deployment
]
lint.unfixable = [
    # Don't touch unused imports
    "F401",
]

[tool.ruff.lint.isort]
known-first-party = ["project_risk"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

"__init__.py" = ["F401", "PLC0414"]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.ty.environment]
python-version = "3.12"
